minor buxfixes, fixed bottom scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     width:100vw;
+    max-width: 100%;
 }
 
 /* ### header navigation ###*/
@@ -35,6 +36,7 @@
     justify-content: center;
     background-color: var(--color-white);
     width: 100vw;
+    max-width: 100%;
     height: 70px;
     box-shadow: 0px 3px 6px var(--color-grey);
 }
@@ -213,7 +215,7 @@
     border-radius: 5px;
 }
 
-.h3 {
+.benefit-box-h2 {
     font-family: var(--raleway-font);
     color: var(--color-black);
     font-size: 36px;
@@ -435,14 +437,14 @@
     height: 461px;
 }
 
-.h4 {
+.h3 {
     font-family: var(--raleway-font);
     font-weight: bold;
     font-size: 20px;
     padding-top: 35px;
 }
 
-.h4-2 {
+.pricing-box-2-h3 {
     font-family: var(--raleway-font);
     font-weight: bold;
     font-size: 21px;
@@ -697,6 +699,7 @@ input:focus {
 
 .footer {
     width: 100vw;
+    max-width: 100%;
     margin-top: 60px;
     background-color: var(--color-light-grey);
     background-repeat: no-repeat;
